tests/spec/parse/snapshots/enum_basic.snap
---
source: tests/spec/parse/mod.rs
description: |
  
  enum Status {
    Pending,
    Processing,
    Complete,
    Failed,
  }
---
[
    Enum {
        doc: None,
        attributes: [],
        name: "Status",
        name_span: Span {
            file_id: 0,
            byte_offset: 6,
            byte_length: 6,
        },
        generics: [],
        variants: [
            EnumVariant {
                doc: None,
                attributes: [],
                name: "Pending",
                name_span: Span {
                    file_id: 0,
                    byte_offset: 17,
                    byte_length: 7,
                },
                fields: Unit,
            },
            EnumVariant {
                doc: None,
                attributes: [],
                name: "Processing",
                name_span: Span {
                    file_id: 0,
                    byte_offset: 28,
                    byte_length: 10,
                },
                fields: Unit,
            },
            EnumVariant {
                doc: None,
                attributes: [],
                name: "Complete",
                name_span: Span {
                    file_id: 0,
                    byte_offset: 42,
                    byte_length: 8,
                },
                fields: Unit,
            },
            EnumVariant {
                doc: None,
                attributes: [],
                name: "Failed",
                name_span: Span {
                    file_id: 0,
                    byte_offset: 54,
                    byte_length: 6,
                },
                fields: Unit,
            },
        ],
        visibility: Private,
        span: Span {
            file_id: 0,
            byte_offset: 1,
            byte_length: 62,
        },
    },
]
