tests/spec/parse/snapshots/enum_mixed_variants.snap
---
source: tests/spec/parse/mod.rs
description: |
  
  enum Message {
    Quit,
    Move { x: int, y: int },
    Write(string),
  }
---
[
    Enum {
        doc: None,
        attributes: [],
        name: "Message",
        name_span: Span {
            file_id: 0,
            byte_offset: 6,
            byte_length: 7,
        },
        generics: [],
        variants: [
            EnumVariant {
                doc: None,
                attributes: [],
                name: "Quit",
                name_span: Span {
                    file_id: 0,
                    byte_offset: 18,
                    byte_length: 4,
                },
                fields: Unit,
            },
            EnumVariant {
                doc: None,
                attributes: [],
                name: "Move",
                name_span: Span {
                    file_id: 0,
                    byte_offset: 26,
                    byte_length: 4,
                },
                fields: Struct(
                    [
                        EnumFieldDefinition {
                            name: "x",
                            name_span: Span {
                                file_id: 0,
                                byte_offset: 33,
                                byte_length: 1,
                            },
                            annotation: Constructor {
                                name: "int",
                                params: [],
                                span: Span {
                                    file_id: 0,
                                    byte_offset: 36,
                                    byte_length: 3,
                                },
                            },
                            ty: Var {
                                id: uninferred,
                            },
                        },
                        EnumFieldDefinition {
                            name: "y",
                            name_span: Span {
                                file_id: 0,
                                byte_offset: 41,
                                byte_length: 1,
                            },
                            annotation: Constructor {
                                name: "int",
                                params: [],
                                span: Span {
                                    file_id: 0,
                                    byte_offset: 44,
                                    byte_length: 3,
                                },
                            },
                            ty: Var {
                                id: uninferred,
                            },
                        },
                    ],
                ),
            },
            EnumVariant {
                doc: None,
                attributes: [],
                name: "Write",
                name_span: Span {
                    file_id: 0,
                    byte_offset: 53,
                    byte_length: 5,
                },
                fields: Tuple(
                    [
                        EnumFieldDefinition {
                            name: "field0",
                            name_span: Span {
                                file_id: 4294967295,
                                byte_offset: 0,
                                byte_length: 0,
                            },
                            annotation: Constructor {
                                name: "string",
                                params: [],
                                span: Span {
                                    file_id: 0,
                                    byte_offset: 59,
                                    byte_length: 6,
                                },
                            },
                            ty: Var {
                                id: uninferred,
                            },
                        },
                    ],
                ),
            },
        ],
        visibility: Private,
        span: Span {
            file_id: 0,
            byte_offset: 1,
            byte_length: 68,
        },
    },
]
